# stuff

./: README.md
crystal/findmac/: README.md  findmac.cr
powershell/: get-autopilot-hashes.ps1
python/: test.py
python/KPA/: README.md  kpa.py  product_ids.txt
python/learning/api-course/: main.py  pyproject.toml
python/snapshot-shield/: README.md  requirements.txt  snapshotshield.py
python/tui-experiments/dns-propagation-checker/: pyproject.toml  start.py
