[tool.poetry]
name = "api-course"
version = "0.1.0"
description = ""
authors = ["Wise <wise@wise.wtf>"]
readme = "README.md"
packages = [{include = "api_course"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
